Fixed fdo#37083 mis-positioning caused by internal TeX points.

* Changed Calc's internal definition of points per inch from TeX points (72.27
  points per inch) to PostScript points (72 points per inch) as used by the
  rest of the world (except TeX).
* Aligns between internal representation and API that at various places
  assumed PS points already.
* Fixes mis-positioning and bad sizing of drawing layer objects relative to
  column widths and row heights.
* More precise printout of column widths and row heights.
* UI dialogs such as Column Width always assumed PS points, so earlier
  versions actually displayed wrong metric (and imperial) units.
* Printouts now are slightly larger due to 0.27 points less in an inch, but
  more accurate in reflecting the actual UI values, and drawing layer objects'
  position and size match the row heights and column widths.
- Problems with drawing layer objects and zoomed view versus Page Preview
  versus printout that don't align still persist.
- Problems with resized rows and misplaced drawing layer objects are also not
  magically healed.