sc/source/ui/unoobj/cellsuno.cxx
@@ -815,9 +815,8 @@ const SvxItemPropertySet* lcl_GetEditPropertySet()
 
 //------------------------------------------------------------------------
 
-//! diese Funktionen in einen allgemeinen Header verschieben
-inline long TwipsToHMM(long nTwips) { return (nTwips * 127 + 36) / 72; }
-inline long HMMToTwips(long nHMM)   { return (nHMM * 72 + 63) / 127; }
+using sc::HMMToTwips;
+using sc::TwipsToHMM;
 
 //------------------------------------------------------------------------
 
