sc/source/ui/unoobj/docuno.cxx
@@ -195,9 +195,8 @@ const SfxItemPropertyMapEntry* lcl_GetRowsPropertyMap()
     return aRowsPropertyMap_Impl;
 }
 
-//! move these functions to a header file
-inline long TwipsToHMM(long nTwips) { return (nTwips * 127 + 36) / 72; }
-inline long HMMToTwips(long nHMM)   { return (nHMM * 72 + 63) / 127; }
+using sc::HMMToTwips;
+using sc::TwipsToHMM;
 
 //------------------------------------------------------------------------
 
